# pack.c

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  nurfile  pack.c  pack.h
lib/: common.c  common.h  container.c  container.h  hashtable.c  hashtable.h  threadpool.c  threadpool.h  walk.c  walk.h  zstd_util.c  zstd_util.h
lib/compress/: dirwalk.c  dirwalk.h  file_handler.c  file_handler.h  walk.c  walk.h
patches/: datastructs.patch
